// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcAlert displays correct message 1`] = `
<div class="oc-alert oc-alert-passive">
  <oc-button-stub type="button" size="medium" arialabel="Close alert" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="oc-alert-close">
    <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="small" variation="inverse" color=""></oc-icon-stub>
  </oc-button-stub>
  <p class="slot-message">Test message</p>
</div>
`;

exports[`OcAlert hides the close button if disabled 1`] = `
<div class="oc-alert oc-alert-passive">
  <!---->
  <p class="slot-message">Test message</p>
</div>
`;

exports[`OcAlert sets correct variation 1`] = `
<div class="oc-alert oc-alert-primary">
  <oc-button-stub type="button" size="medium" arialabel="Close alert" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" class="oc-alert-close">
    <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="small" variation="inverse" color=""></oc-icon-stub>
  </oc-button-stub>
  <p class="slot-message">Test message</p>
</div>
`;
